
0.1.3 - 2009-XXX-XXX
--------------------
NEW FEATURES
 * Issue 14: per-process username
 * Issue 51: per-process current working directory (Windows and Linux only)
 * Issue 59: Process.is_running() is now 10 times faster
 * Issue 61: added supoprt for FreeBSD 64 bit
 * Issue 71: implemented suspend/resume process
 * Issue 75: python 3 support

BUGFIXES
 * Issue 48: incorrect size for mib array defined in getcmdargs for BSD
 * Issue 49: possible memory leak due to missing free() on error condition on
 * Issue 50: fixed getcmdargs() memory fragmentation on BSD
 * Issue 55: test_pid_4 was failing on Windows Vista
 * Issue 57: some unit tests were failing on systems where no swap memory is
   available
 * Issue 58: is_running() is now called before kill() to make sure we are going
   to kill the correct process.
 * Issue 73: virtual memory size reported on OS X includes shared library size
 * Issue 76: process cpu_times() and memory_info() functions succeeded also for
   dead processes while a NoSuchProcess exception is supposed to be raised.


0.1.2 - 2009-05-06
------------------
NEW FEATURES
 * Issue 32: Per-process CPU user/kernel times
 * Issue 33: Process create time
 * Issue 34: Per-process CPU utilization percentage
 * Issue 38: Per-process memory usage (bytes)
 * Issue 41: Per-process memory utilization (percent)
 * Issue 39: System uptime
 * Issue 43: Total system virtual memory
 * Issue 46: Total system physical memory
 * Issue 44: Total system used/free virtual and physical memory

BUGFIXES
 * Issue 36: NoSuchProcess not raised on Windows when accessing timing methods
 * Issue 40: test_get_cpu_times() failing on FreeBSD and OS X
 * Issue 42: get_memory_percent() raises AccessDenied on Windows


0.1.1 - 2009-03-06
------------------
NEW FEATURES
 * Issue 4: FreeBSD support for all functions of psutil
 * Issue 9: Process.uid and Process.gid now retrieve process UID and GID.
 * Issue 11: Support for parent/ppid - Process.parent property returns a