@@ -11,6 +11,8 @@ NEW FEATURES
  * Issue 75: python 3 support
 
 BUGFIXES
+ * Issue 36: process cpu_times() and memory_info() functions succeeded also for
+   dead processes while a NoSuchProcess exception is supposed to be raised.
  * Issue 48: incorrect size for mib array defined in getcmdargs for BSD
  * Issue 49: possible memory leak due to missing free() on error condition on
  * Issue 50: fixed getcmdargs() memory fragmentation on BSD
@@ -20,8 +22,8 @@ BUGFIXES
  * Issue 58: is_running() is now called before kill() to make sure we are going
    to kill the correct process.
  * Issue 73: virtual memory size reported on OS X includes shared library size
- * Issue 76: process cpu_times() and memory_info() functions succeeded also for
-   dead processes while a NoSuchProcess exception is supposed to be raised.
+ * Issue 77: NoSuchProcess wasn't raised on Process.create_time if kill() was
+   used first.
 
 
 0.1.2 - 2009-05-06
